Create function generator of mail

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "request-promise": "^4.2.6"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3"
+    "cheerio": "^1.0.0-rc.3",
+    "request": "^2.88.2"
   }
 }
