update title project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yopmail",
+  "name": "easy-yopmail",
   "version": "1.0.0",
   "description": "generate random mail using http://yopmail.com",
   "main": "index.js",
