--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "easy-yopmail",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "generate random mail using http://yopmail.com",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
