--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "easy-yopmail",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "generate random mail using http://yopmail.com",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": {
