--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "easy-yopmail",
   "version": "1.3.3",
   "description": "generate random mail using http://yopmail.com",
-  "main": "index.js",
   "scripts": {
-    "start": "nodemon .",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": {
