--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "easy-yopmail",
   "version": "1.3.3",
   "description": "generate random mail using http://yopmail.com",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": {
@@ -19,5 +20,8 @@
     "js-packtools": "^2.3.18",
     "node-fetch": "latest",
     "node-fetch-cookies": "^1.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
