Fix: #2 compatible with YOPmail v5.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /node_modules/
 /package-lock.json
 /.idea/
+/tests/archives/inbox.json
+/tests/archives/mailHTML_content.html
+/tests/archives/mailHTML_id.html
+/tests/archives/mailHTML_subject.html
