--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "easy-yopmail",
-  "version": "1.4.6",
-  "description": "generate random mail using http://yopmail.com",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "Easy-YOPmail (get mail address, inbox and read mail from YOPmail with nodeJS)",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./tests/test.spec.js"
   },
   "author": {
     "name": "Jesús Antonio Pérez Sandoval",
@@ -13,11 +13,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cheerio": "^1.0.0-rc.3",
-    "express": "^4.17.1",
-    "js-packtools": "^2.3.18",
-    "node-fetch": "latest",
-    "node-fetch-cookies": "^1.4.2"
+    "puppeteer": "^10.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jasp402/Easy-YOPmail.git"
   }
 }
