--- a/.github/workflows/Qodana.yml
+++ b/.github/workflows/Qodana.yml
@@ -1,4 +1,4 @@
-name: Qodana
+name: 🧪 Qodana
 on:
   workflow_dispatch:
   pull_request:
@@ -15,7 +15,7 @@ jobs:
       pull-requests: write
       checks: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
           fetch-depth: 0  # a full history is required for pull request analysis
