--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,10 +34,12 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           # Upload entire repository
+          name: github-pages
           path: '.'
+          retention-days: 1
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
