--- a/.github/workflows/deploy-static-content.yml
+++ b/.github/workflows/deploy-static-content.yml
@@ -40,14 +40,16 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           # Upload entire repository
+          name: github-pages
           path: |
             .
             !./.git
             !./.github
             !./node_modules
+          retention-days: 1
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
